2010-12-16  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Don't fail on trailing NUL bytes.

2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* VERSION: 3.2.1

2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ssh-security.c: Use client_port.

2010-12-14  Daniel Néri <dne@mayonnaise.net>
	* application-src/ampgsql.pl: Don't assume that gtar is configured to
	  use stdin/stdout as default archive.

2010-12-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amidxtaped.pl: Don't crash if same-host doesn't match.

2010-12-12  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/disk.pm: inventory must return the same as
				       read_label.
	* server-src/amtape.pl: Fix for new inventory.
	* installcheck/Amanda_Changer_disk.pl: Fix for new inventory.
	* installcheck/Amanda_Changer_rait.pl: Fix for new inventory.

2010-12-11  Daniel Néri <dne@mayonnaise.net>
	* application-src/ampgsql.pl: Don't assume that gtar is configured to
	  use stdin/stdout as default archive.

2010-12-12  Daniel Néri <dne@mayonnaise.net>
	* application-src/ampgsql.pl: Use diskname, not devicename, as prefix
	  when checking for properties. Now works as documented in the ampgsql
	  man page.

2010-12-10  David Bogen <bogen@wisc.edu>
	* server-src/amoverview.pl: fix amoverview's argument parsing

2010-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck-device.pl: Fix possible hang if
	  Amanda::MainLoop::quit is called before Amanda::MainLoop::run.
	* perl/Amanda/Changer.pm: Return the error.

2010-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Check if taper is flushing something before
	  moving a dle to directq.

2010-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/xfer-dest-taper-cacher.c: Print why the malloc failed.

2010-12-08  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/glib-util.c common-src/glib-util.h: do not define