@@ -1,3 +1,7 @@
+2010-12-20  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/find.c: Fix parsing 'PARTIAL taper' line with no part.
+	* perl/Amanda/DB/Catalog.pm: Ditto
+
 2010-12-16  Jean-Louis Martineau <martineau@zmanda.com>
 	* amar-src/amar.c: Don't fail on trailing NUL bytes.
 
